--- a/customer-files.html
+++ b/customer-files.html
@@ -6,9 +6,9 @@
     <title>LIMS - Customer Files</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-    <link rel="stylesheet" href="/css/General/main.css" />
-    <link rel="stylesheet" href="/css/General/darkmode.css" />
-    <link rel="stylesheet" href="/css/Transactions/Customers/customer-files.css" />
+    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="darkmode.css" />
+    <link rel="stylesheet" href="customer-files.css" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 </head>
@@ -101,6 +101,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/js/General/main.js"></script>
-    <script src="/js/Transactions/Customers/customer-files.js"></script>
+    <script src="main.js"></script>
+    <script src="customer-files.js"></script>
 </html>
