--- a/registration.html
+++ b/registration.html
@@ -144,9 +144,24 @@
                         <input type="text" id="customer" class="form-control" disabled>
                     </div>
                     <div class="form-group-with-icons">
-                        <label for="payment-terms">Payment Terms:</label>
-                        <input type="text" id="payment-terms" class="form-control" placeholder="[EditValue is null]" disabled>
-                    </div>
+        <label for="payment-terms">Payment Terms:</label>
+        <div class="input-with-icon custom-autocomplete-container">
+            <input type="text" id="payment-terms" class="form-control" placeholder="[EditValue is null]" disabled>
+            <i class="fas fa-caret-down icon-btn" data-onclick="openPaymentTermsDropdown()"></i>
+            <div class="custom-dropdown-payment-terms" id="payment-terms-dropdown" style="display: none;">
+                <div class="dropdown-header">Payment Terms</div>
+                <ul class="dropdown-options-list">
+                    <li onclick="selectPaymentTerms('CASH')">CASH</li>
+                    <li onclick="selectPaymentTerms('ADVANCE')">ADVANCE</li>
+                    <li onclick="selectPaymentTerms('30 DAYS')">30 DAYS</li>
+                    <li onclick="selectPaymentTerms('10 DAYS')">10 DAYS</li>
+                    <li onclick="selectPaymentTerms('7 DAYS')">7 DAYS</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
                 </div>
 
                 <div class="form-grid-4-cols">
@@ -158,7 +173,29 @@
                             <i class="fas fa-arrow-right icon-btn-arrow" data-onclick="fetchPouringTicketDetails()"></i>
                         </div>
                     </div>
-                    
+                   <div class="form-group-with-icons">
+    <label for="sample-type">Sample Type:</label>
+    <div class="input-with-icon custom-autocomplete-container">
+        <input type="text" id="sample-type" class="form-control" placeholder="[EditValue is null]" disabled>
+        <i class="fas fa-caret-down icon-btn" onclick="openSampleTypeDropdown()"></i>
+        <div class="custom-dropdown-sample-type" id="sample-type-dropdown" style="display: none;">
+            <div class="dropdown-header">Sample Type</div>
+            <ul class="dropdown-options-list">
+                <li onclick="selectSampleType('CUBE 100')">CUBE 100</li>
+                <li onclick="selectSampleType('CUBE 150')">CUBE 150</li>
+                <li onclick="selectSampleType('CYLINDER')">CYLINDER</li>
+                <li onclick="selectSampleType('CONCRETE CORES')">CONCRETE CORES</li>
+                <li onclick="selectSampleType('MORTAR')">MORTAR</li>
+                <li onclick="selectSampleType('GROUT')">GROUT</li>
+                <li onclick="selectSampleType('ITEM 7')">ITEM 7</li>
+                <li onclick="selectSampleType('ITEM 8')">ITEM 8</li>
+                <li onclick="selectSampleType('ITEM 9')">ITEM 9</li>
+                <li onclick="selectSampleType('ITEM 10')">ITEM 10</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
                     <div class="form-group-with-icons">
                         <label for="confirmation">Confirmation:</label>
                         <div class="input-with-icon custom-autocomplete-container">
@@ -283,10 +320,32 @@
                             <i class="fas fa-caret-down icon-btn" onclick="openCementTypeDropdown()"></i>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label for="nominal-size">Nominal Size:</label>
-                        <input type="text" id="nominal-size" class="form-control" disabled>
-                    </div>
+                    <div class="form-grid-3-cols">
+    <div class="form-group">
+        <label for="nominal-size">Nominal Size:</label>
+        <div class="input-with-icon custom-autocomplete-container">
+            <input type="text" id="nominal-size" class="form-control" placeholder="[EditValue is null]" disabled>
+            <i class="fas fa-caret-down icon-btn" onclick="openNominalSizeDropdown()"></i>
+            <div class="custom-dropdown-nominal-size" id="nominal-size-dropdown" style="display: none;">
+                <div class="dropdown-header">Nominal Size</div>
+                <ul class="dropdown-options-list">
+                    <li onclick="selectNominalSize('4.75 mm')">4.75 mm</li>
+                    <li onclick="selectNominalSize('9.5 mm')">9.5 mm</li>
+                    <li onclick="selectNominalSize('12.5 mm')">12.5 mm</li>
+                    <li onclick="selectNominalSize('19.0 mm')">19.0 mm</li>
+                    <li onclick="selectNominalSize('25.0 mm')">25.0 mm</li>
+                    <li onclick="selectNominalSize('37.5 mm')">37.5 mm</li>
+                    <li onclick="selectNominalSize('50 mm')">50 mm</li>
+                    <li onclick="selectNominalSize('75 mm')">75 mm</li>
+                    <li onclick="selectNominalSize('100x200 mm')">100x200 mm</li>
+                    <li onclick="selectNominalSize('150x300 mm')">150x300 mm</li>
+                    <li onclick="selectNominalSize('100x100x100 mm')">100x100x100 mm</li>
+                    <li onclick="selectNominalSize('150x150x150 mm')">150x150x150 mm</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    </div>
                     <div class="form-group">
                         <label for="class">Class:</label>
                         <div class="input-with-icon">
@@ -295,69 +354,41 @@
                         </div>
                     </div>
                 </div>
-                <div class="form-section-title">Test Information</div>
-                <div class="test-table-container">
-                    <table class="test-data-table">
-                        <thead>
-                            <tr>
-                                <th>Test Method</th>
-                                <th>R. Age</th>
-                                <th>A. Age</th>
-                                <th>Price</th>
-                                <th>QTY</th>
-                                <th>Scheduled </th>
-                                <th>Rem.</th>
-                                <th>Test Location</th>
-                                <th>Report No.</th>
-                                <th>Rev.</th>
-                                <th>Items</th>
-                                <th><i class="fas fa-plus" onclick="addNewTestRow()"></i></th>
-                            </tr>
-                        </thead>
-                        <tbody id="test-table-body">
-                            <tr>
-                                <td>
-                                    <div class="input-with-icon">
-                                        <input type="text" class="form-control" disabled data-dropdown="test-method-dropdown">
-                                        <i class="fas fa-caret-down icon-btn" onclick="openDropdown(this, 'test-method-dropdown')"></i>
-                                    </div>
-                                </td>
-                                <td><input type="number" class="form-control" value="0" disabled/></td>
-                                <td><input type="number" class="form-control" value="0" disabled/></td>
-                                <td><input type="number" class="form-control" value="0" disabled/></td>
-                                <td><input type="number" class="form-control" value="0" disabled/></td>
-                                <td>
-                                    <div class="input-with-icon">
-                                        <input type="datetime-local" class="form-control" disabled/>
-                                        <i class="fas fa-calendar-alt icon-btn" onclick="openCalendar(this)"></i>
-                                    </div>
-                                </td>
-                                <td><input type="text" class="form-control" disabled/></td>
-                                <td>
-                                    <div class="input-with-icon">
-                                        <input type="text" class="form-control" disabled data-dropdown="test-location-dropdown">
-                                        <i class="fas fa-caret-down icon-btn" onclick="openDropdown(this, 'test-location-dropdown')"></i>
-                                    </div>
-                                </td>
-                                <td><input type="text" class="form-control" value="[Auto]" readonly disabled/></td>
-                                <td><input type="text" class="form-control" value="0" readonly disabled/></td>
-                                <td>
-                                    <i class="fas fa-box items-icon" onclick="openItemsModal(this)"></i>
-                                </td>
-                                <td>
-                                    <i class="fas fa-trash-alt delete-row" onclick="deleteTestRow(this)"></i>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </form>
-        </div>
+              <div class="form-section-title">Test Information</div>
+<div class="test-table-container">
+    <table class="test-data-table">
+        <thead>
+            <tr>
+                <th>Test Method</th>
+                <th>R. Age</th>
+                <th>A. Age</th>
+                <th>Price</th>
+                <th>QTY</th>
+                <th>Scheduled @</th>
+                <th>Rem.</th>
+                <th>Test Location</th>
+                <th>Report No.</th>
+                <th>Rev.</th>
+                <th>Items</th>
+                <th><i class="fas fa-plus add-row-icon" onclick="addNewTestRow()"></i></th>
+            </tr>
+        </thead>
+        <tbody id="test-table-body">
+            </tbody>
+    </table>
+</div>
 
-        <div id="other-tests" class="sub-tab-content">
-            <p>Content for Other Tests...</p>
-        </div>
-    </div>
+<div class="dropdown-container" id="test-method-dropdown">
+    <div class="dropdown-item" data-value="ASTM C39/C39M-21">ASTM C39/C39M-21</div>
+    <div class="dropdown-item" data-value="ASTM C128">ASTM C128</div>
+    <div class="dropdown-item" data-value="ASTM D422">ASTM D422</div>
+</div>
+
+<div class="dropdown-container" id="test-location-dropdown">
+    <div class="dropdown-item" data-value="CONCRETE LAB.">CONCRETE LAB.</div>
+    <div class="dropdown-item" data-value="SOIL LAB.">SOIL LAB.</div>
+    <div class="dropdown-item" data-value="FIELD.">FIELD.</div>
+</div>
 
     <div class="form-footer-buttons" id="form-footer-buttons" style="display: none;">
     <div class="order-no-footer">
@@ -374,22 +405,7 @@
             </div>
         </div>
     </div>
-    <button class="btn btn-secondary" id="actions-btn" disabled>
-        <i class="fas fa-user-friends"></i> Actions
-    </button>
-    <button class="btn btn-secondary" id="close-btn" onclick="closeRegistrationTab()">
-        <i class="fas fa-times"></i> Close
-    </button>
-    <button class="btn btn-primary" id="new-btn" onclick="enableForm()">
-        <i class="fas fa-plus"></i> New
-    </button>
-    <button class="btn btn-success" id="save-close-btn" disabled>
-        <i class="fas fa-save"></i> Save & Close
-    </button>
-    <button class="btn btn-success" id="save-btn" disabled>
-        <i class="fas fa-save"></i> Save
-    </button>
-</div>
+
     
     <div id="confirmation-selection-modal" class="modal-overlay" style="display: none;">
         <div class="modal-content large-modal">
@@ -455,7 +471,22 @@
             </div>
         </div>
     </div>
-
+    <button class="btn btn-secondary" id="actions-btn" disabled>
+        <i class="fas fa-user-friends"></i> Actions
+    </button>
+    <button class="btn btn-secondary" id="close-btn" onclick="closeRegistrationTab()">
+        <i class="fas fa-times"></i> Close
+    </button>
+  <button class="btn btn-primary" id="new-btn" onclick="enableForm()">
+    <i class="fas fa-plus"></i> New
+</button>
+    <button class="btn btn-success" id="save-close-btn" disabled>
+        <i class="fas fa-save"></i> Save & Close
+    </button>
+    <button class="btn btn-success" id="save-btn" disabled>
+        <i class="fas fa-save"></i> Save
+    </button>
+</div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
